# bevy_diagnostic_vertex_count

./: Cargo.toml  LICENSE  LICENSE.Apache-2.0  LICENSE.MIT  README.md
src/: lib.rs
