[package]
name = "bevy_diagnostic_vertex_count"
version = "0.2.0"
description = "Bevy diagnostics plugin for counting vertices of all present meshes in a world"
authors = ["DMClVG"]
license = "Apache-2.0 OR MIT"
keywords = ["bevy", "diagnostic", "vertex", "mesh", "count"]
categories = []
exclude = []
edition = "2021"
readme = "README.md"
repository = "https://github.com/DMClVG/bevy_diagnostic_vertex_count"

[dependencies]
bevy = { version="0.8", default-features = false, features=["bevy_asset", "render"] }